force-app/main/default/objects/ffr__ObjectToObjectMapFieldLink__c/ffr__ObjectToObjectMapFieldLink__c.object-meta.xml
<CustomObject>
    <description>Defines how two fields map to each other</description>
    <label>ObjectToObjectMapFieldLink</label>
    <nameField>
        <displayFormat>OTOMFL-{000000}</displayFormat>
        <label>ObjectToObjectMapFieldLink Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ObjectToObjectMapFieldLinks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>