force-app/main/default/objects/ffr__ObjectToObjectMapFieldLink__c/fields/ffr__DisplayOrder__c.field-meta.xml
<CustomField>
    <fullName>ffr__DisplayOrder__c</fullName>
    <label>Display Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>