force-app/main/default/objects/ffr__ObjectToObjectMapFieldLink__c/fields/ffr__ObjectToObjectMap__c.field-meta.xml
<CustomField>
    <fullName>ffr__ObjectToObjectMap__c</fullName>
    <description>Parent Map</description>
    <label>ObjectToObjectMap</label>
    <referenceTo>ffr__ObjectToObjectMap__c</referenceTo>
    <relationshipLabel>ObjectToObjectMapFieldLinks</relationshipLabel>
    <relationshipName>ObjectToObjectMapFieldLinks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>