force-app/main/default/objects/ffr__ObjectToObjectMapFieldLink__c/fields/ffr__ToField__c.field-meta.xml
<CustomField>
    <fullName>ffr__ToField__c</fullName>
    <description>The field to map to</description>
    <label>ToField</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>